<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:scrollbarStyle="insideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_user_name1"
            android:inputType="textImeMultiLine|textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/Gender" />

        <RadioGroup
            android:id="@+id/radiogroup_Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/female1" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/male1" />
        </RadioGroup>


        <TextView
            android:id="@+id/selectprogram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/Select_Program" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/program"
            android:fontFamily="casual" />


        <TextView
            android:id="@+id/selectyear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/Select_Year" />


        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/class_year"
            android:fontFamily="casual" />


        <TextView
            android:id="@+id/selectmajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/Select_Major" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/Major"
            android:fontFamily="casual" />

        <TextView
            android:id="@+id/greek_societies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/Select_GreekSociety" />


        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawSelectorOnTop="true"
            android:entries="@array/Greek"
            android:fontFamily="casual" />


        <TextView
            android:id="@+id/interests"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="casual"
            android:text="Select activities of interest" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:text="Cultural Events" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:text="Sports" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:text="Food" />


        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:text="Guest speakers" />


        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:fontFamily="casual"
            android:text="Workshops" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bCancel"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/cast_expanded_controller_background_color"
                android:fontFamily="casual"
                android:text="@string/cancel"
                android:textColor="@color/cast_expanded_controller_progress_text_color" />

            <Button
                android:id="@+id/bSave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"

                android:layout_weight="1"
                android:background="@color/Dartmouth"
                android:fontFamily="casual"
                android:onClick="SaveClick"
                android:text="@string/save"
                android:textColor="@color/cast_expanded_controller_background_color"
                tools:targetApi="o" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>




